--- a/PasswordChecker/pom.xml
+++ b/PasswordChecker/pom.xml
@@ -34,5 +34,12 @@
 			<version>3.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.0.0-beta3</version>
+		</dependency>
 	</dependencies>
+
+
 </project>
